--- a/src/Client/Pages/Chat.razor
+++ b/src/Client/Pages/Chat.razor
@@ -5,8 +5,8 @@
 
 <PageTitle>Chat!</PageTitle>
 
-<div class="d-flex flex-column justify-content-between">
-    <div class="d-flex flex-column flex-fill">
+<div class="d-flex flex-column justify-content-between h-100">
+    <div class="d-flex flex-column flex-fill overflow-auto">
         @foreach (var chatMessage in _chatMessages)
         {
             <UserChatBubble 
@@ -14,14 +14,16 @@
                 IsSender="@(chatMessage.Username == UserName)"/>
         }
     </div>
-    <div class="flex-shrink-1 input-group mb-3 border-1 border-top border-secondary align-self-end">
-        <input @bind="@_inputMessage"
-               @onkeydown="Enter"
-               type="text"
-               class="form-control"
-               placeholder="Type a message"
-               aria-describedby="button-send">
-        <button class="btn btn-outline-secondary" type="button" id="button-send" @onclick="Send">Send</button>
+    <div class="d-flex w-100 align-self-end">
+        <div class="input-group pt-2 border-1 border-top border-secondary">
+            <input @bind="@_inputMessage"
+                @onkeydown="Enter"
+                type="text"
+                class="form-control"
+                placeholder="Type a message"
+                aria-describedby="button-send">
+            <button class="btn btn-outline-secondary" type="button" id="button-send" @onclick="Send">Send</button>
+        </div>
     </div>
 </div>
 
