--- a/src/Client/wwwroot/css/app.css
+++ b/src/Client/wwwroot/css/app.css
@@ -4,8 +4,9 @@ html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-body {
-    height: 100%
+html, body, #app {
+    min-height: 100% !important;
+    height: 100%;
 }
 
 h1:focus {
